refactor: improve code readability and resource management
- Refactor AbstractIndexer for better line breaks and readability
- Add explicit resource management for ExecutorService and ScheduledExecutorService
- Improve IndexCollection with better argument handling and resource cleanup
- Update SimpleIndexer with proper ExecutorService shutdown
- Enhance BenchmarkCollectionReader with improved resource management
- Fix CloneIndexTest to use get(0) instead of getFirst() for compatibility
- Update .gitignore to exclude personal documentation files